--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,30 +1,106 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.compileSdkVersion
+    buildToolsVersion rootProject.buildToolsVersion
+
+    aaptOptions {
+        cruncherEnabled = false
+    }
+
     defaultConfig {
         applicationId "am.highapps.buythisproduct"
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.targetSdkVersion
+        versionCode rootProject.versionCode
+        versionName rootProject.versionName
+        multiDexEnabled true
+//        resConfigs "auto"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
+        debug {
+            debuggable true
+//            applicationIdSuffix '.debug'
+//            versionNameSuffix '-debug'
+            // set 'useProguard false' and 'minifyEnabled true' to shrink code without obfuscating
+            // debuggable true
+            // minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            // signingConfig signingConfigs.debug
+        }
+
         release {
+            debuggable false
             minifyEnabled false
+//            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
+//    buildToolsVersion '27.0.3'
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    // Support
+    implementation "com.android.support:appcompat-v7:${rootProject.supportVersion}"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:support-v4:28.0.0-rc01'
-    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation "com.android.support:design:${rootProject.supportVersion}"
+    implementation "com.android.support:support-v4:${rootProject.supportVersion}"
+    implementation "com.android.support:multidex:${rootProject.multiDexVersion}"
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation "com.google.firebase:firebase-database:${rootProject.googlePlayServicesVersion}"
+    implementation "com.google.firebase:firebase-crash:${rootProject.googlePlayServicesVersion}"
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+
+    // LiveData
+    implementation "android.arch.lifecycle:extensions:${rootProject.arch_version}"
+    annotationProcessor "android.arch.lifecycle:compiler:${rootProject.arch_version}"
+
+    // Room
+    implementation "android.arch.persistence.room:runtime:${rootProject.arch_version}"
+    annotationProcessor "android.arch.persistence.room:compiler:${rootProject.arch_version}"
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Other
+    implementation "com.afollestad.material-dialogs:core:${rootProject.materialDialogsVersion}"
+    implementation 'com.github.kapil93:circular-layout-manager:1.0.0'
+
+    // Tests
+    implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
