--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
   package="am.highapps.buythisproduct">
 
   <application
+    android:name=".app.App"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
@@ -10,6 +11,9 @@
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity android:name=".ui.activity.MainActivity">
+
+    </activity>
+    <activity android:name=".ui.activity.SplashActivity" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
