--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
+        maven {
+            url "https://jitpack.io"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        
+        classpath 'com.android.tools.build:gradle:3.1.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.0.2'
     }
 }
 
@@ -19,9 +23,49 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
+        maven {
+            url "https://jitpack.io"
+        }
     }
+}
+
+ext {
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.3'
+    minSdkVersion = 21
+    targetSdkVersion = 25
+    versionCode = 1
+    versionName = '1.0.0'
+    kotlin_version = '1.2.10'
+
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    // Dependencies versions
+    multiDexVersion = '1.0.3'
+    supportVersion = '27.1.1'
+    googlePlayServicesVersion = '16.0.1'
+    firebaseVersion = ext.googlePlayServicesVersion
+    firebaseUiAuthVersion = '3.3.0'
+    firebaseDispatcherVersion = '0.8.2'
+    materialDialogsVersion = '0.9.0.1'
+
+    arch_version = '1.1.1'
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            // Force all of the primary support libraries to use the same version.
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex')) {
+                details.useVersion "$supportVersion"
+            }
+        }
+    }
 }
